add image and murkup

--- a/index.html
+++ b/index.html
@@ -55,7 +55,51 @@
         <h3 class="features-sub-title">Види перфорацій касетної стелі</h3>
         <ol class="perforation-list" id="perforation-list"></ol>
       </section>
-      <section class="advantages"></section>
+      <section class="advantages">
+        <h2 class="advantages-title">Переваги касетної стелі Geipel</h2>
+        <div class="advantages-wrapper">
+          <img src="./images/img.png" alt="advantages-img" />
+
+          <div>
+            <h3>Рівень якості</h3>
+            <ul class="advantages-list">
+              <li>
+                Для виробництва підвісних касетних стель Geipel використовують
+                високоякісні метали - оцинковану сталь і алюміній.
+              </li>
+              <li>
+                Товщину металу, яка забезпечує найкращі експлуатаційні
+                властивості касетних стель, визначають за допомогою складних
+                інженерних розрахунків.
+              </li>
+              <li>
+                Поверхні касет у процесі виготовлення надають ідеальної
+                гладкості, що робить стелю особливо функціональною і, звісно,
+                стильною та красивою.
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <h4 class="advantages-sub-title">Міцність і надійність</h4>
+        <ol class="advantages-sub-list">
+          <li>
+            Для виробництва касет Geipel використовується метал, захищений від
+            корозії і здатний витримувати вплив агресивного середовища, тому
+            стелі Geipel служать протягом багатьох років.
+          </li>
+          <li>
+            Колір касет зберігається протягом усього терміну експлуатації, тому
+            що порошкове покриття, яке наносять на них, стійке до пошкоджень і
+            впливу ультрафіолетових променів.
+          </li>
+          <li>
+            Касети Geipel з білим покриттям здатні знижувати енерговитрати за
+            рахунок того, що їхня поверхня може розсіювати і відбивати світло,
+            стаючи додатковим джерелом світла.
+          </li>
+        </ol>
+      </section>
     </main>
     <script type="module" defer src="./js/script.js"></script>
   </body>
